--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -47,4 +47,8 @@
     height: 100%;
     font-family: 'Berkshire Swash', cursive;
     font-size: 200%;
+    padding: 10px;
+    letter-spacing: 2px;
+    font-weight: bold;
+    text-shadow: 1px -2px 1px grey;
 }
